WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31315
fast/dom/HTMLObjectElement/children-changed.html times out on Windows run-webkit-tests
https://bugs.webkit.org/show_bug.cgi?id=31315
Summary
fast/dom/HTMLObjectElement/children-changed.html times out on Windows run-web...
Brian Weinstein
Reported
2009-11-10 14:18:55 PST
It works fine in the browser, and if I run DRT directly from Visual Studio, it finished, but if I run it through run-webkit-tests, it seems to time out. I'm not sure why this is happening. Going to add it to the Skipped list temporarily.
Attachments
Patch
(2.77 KB, patch)
2010-05-18 21:34 PDT
,
Robin Cao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Cao
Comment 1
2010-05-18 21:34:42 PDT
Created
attachment 56452
[details]
Patch This patch will make the test pass.
Adam Roben (:aroben)
Comment 2
2010-05-19 06:58:15 PDT
Comment on
attachment 56452
[details]
Patch r=me!
WebKit Commit Bot
Comment 3
2010-05-21 09:56:02 PDT
Comment on
attachment 56452
[details]
Patch Clearing flags on attachment: 56452 Committed
r59938
: <
http://trac.webkit.org/changeset/59938
>
WebKit Commit Bot
Comment 4
2010-05-21 09:56:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug