2010-05-21  Robin Cao  <robin.cao@torchmobile.com.cn>

Reviewed by Adam Roben.

        fast/dom/HTMLObjectElement/children-changed.html times out on Windows run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=31315

        * platform/win/Skipped: The test should pass now.
2010-05-21  Robin Cao  <robin.cao@torchmobile.com.cn>

        Reviewed by Adam Roben.

        fast/dom/HTMLObjectElement/children-changed.html times out on Windows run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=31315

        * DumpRenderTree/win/FrameLoadDelegate.cpp:
        (FrameLoadDelegate::didFailProvisionalLoadWithError): Need to invoke locationChangeDone here as mac port does.

Canonical link: https://commits.webkit.org/51031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59938 268f45cc-cd09-0410-ab3c-d52691b4dbfc